// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accessToken reducer should handle FETCH_ACCESS_TOKEN_FAILURE 1`] = `
Object {
  "error": true,
  "isFetching": false,
  "token": "",
}
`;

exports[`accessToken reducer should handle FETCH_ACCESS_TOKEN_REQUEST 1`] = `
Object {
  "error": false,
  "isFetching": true,
  "token": "",
}
`;

exports[`accessToken reducer should handle FETCH_ACCESS_TOKEN_SUCCESS 1`] = `
Object {
  "error": false,
  "isFetching": false,
  "token": "ya29.GlyrBCJQJoIYFzocIunVN-CfjQZMG4oyVuAB6v_x_Z3FRnViyPy_deqRdwSAipQtKc9Nb2RudM9UISwI8SGNXxsJ1t3QHddeCdnoCjsM_vhLa9FlFVqMN_seI7oljg",
}
`;

exports[`accessToken reducer should handle unknown action type 1`] = `
Object {
  "error": false,
  "isFetching": false,
  "token": "",
}
`;

exports[`accessToken reducer should return the initial state 1`] = `
Object {
  "error": false,
  "isFetching": false,
  "token": "",
}
`;
